[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://interface/game_ui/upgrade_ui/script.gd" id="1_y2dmx"]
[ext_resource type="Texture2D" uid="uid://dihn2jcnoog0o" path="res://asset/Miscellaneous/upgrade machine.png" id="2_4apek"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ku8yf"]
bg_color = Color(0.94902, 0.847059, 0.686275, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.239216, 0.133333, 0.188235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cre1p"]
bg_color = Color(0.94902, 0.847059, 0.686275, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.329412, 0.211765, 0.247059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cyahw"]
bg_color = Color(0.94902, 0.847059, 0.686275, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.329412, 0.211765, 0.247059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qu00q"]
texture = ExtResource("2_4apek")
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yv72e"]
bg_color = Color(0.270588, 0.184314, 0.25098, 1)

[node name="UpgradesInterface" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y2dmx")

[node name="Control" type="Control" parent="."]
clip_children = 1
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -88.0
offset_right = 75.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
offset_right = 144.0
offset_bottom = 130.0
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Choice1Btn" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.341176, 0.207843, 0.239216, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ku8yf")
text = "+1 strength"

[node name="Choice2Btn" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.341176, 0.207843, 0.239216, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_cre1p")
text = "+1 vitality"

[node name="Choice3Btn" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.341176, 0.207843, 0.239216, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_cyahw")
text = "+1 dexterity"

[node name="Control" type="Control" parent="Control"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Panel2" type="Panel" parent="Control/Control"]
layout_mode = 1
offset_left = -65.0
offset_top = -146.0
offset_right = 235.0
offset_bottom = 204.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qu00q")

[node name="Panel" type="Panel" parent="Control/Control"]
show_behind_parent = true
layout_mode = 0
offset_right = 153.0
offset_bottom = 186.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yv72e")

[connection signal="pressed" from="Control/VBoxContainer/Choice1Btn" to="." method="_on_choice_1_btn_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Choice2Btn" to="." method="_on_choice_2_btn_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Choice3Btn" to="." method="_on_choice_3_btn_pressed"]
